--- a/jshow-common/pom.xml
+++ b/jshow-common/pom.xml
@@ -89,9 +89,16 @@
 	         <dependency>  
 	            <groupId>org.springframework</groupId>  
 	            <artifactId>spring-jdbc</artifactId>  
-	        </dependency>  
-        
-        
+	        </dependency>
+
+
+
+		  <dependency>
+			  <groupId>com.google.guava</groupId>
+			  <artifactId>guava</artifactId>
+			  <version>18.0</version>
+		  </dependency>
+
 
           <dependency>
 		      <groupId>junit</groupId>
