--- a/jshow-web-admin/development.properties
+++ b/jshow-web-admin/development.properties
@@ -1,5 +1,5 @@
 ##  \u6570\u636e\u5e93
-vip.mysql.wr.jdbc.url=jdbc:mysql://127.0.0.1:3306/jshow_db?useUnicode=true&amp;characterEncoding=UTF-8
+vip.mysql.wr.jdbc.url=jdbc:mysql://192.168.147.35:3306/ka_test?useUnicode=true&amp;characterEncoding=UTF-8
 vip.mysql.wr.jdbc.username=root
 vip.mysql.wr.jdbc.password=123456
 
