--- a/jshow-web-admin/development.properties
+++ b/jshow-web-admin/development.properties
@@ -1,11 +1,11 @@
 ##  \u6570\u636e\u5e93
-vip.mysql.wr.jdbc.url=jdbc:mysql://192.168.147.35:3306/ka_test?useUnicode=true&amp;characterEncoding=UTF-8
+vip.mysql.wr.jdbc.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=UTF8
 vip.mysql.wr.jdbc.username=root
-vip.mysql.wr.jdbc.password=123456
+vip.mysql.wr.jdbc.password=12345678
 
 
 ## \u65e5\u5fd7 
-log.root=d:/logs
+log.root=/export/Logs/jshow
 log.level=INFO
 
 
