--- a/jshow-web-admin/development.properties
+++ b/jshow-web-admin/development.properties
@@ -1,5 +1,5 @@
 ##  \u6570\u636e\u5e93
-vip.mysql.wr.jdbc.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=UTF8
+vip.mysql.wr.jdbc.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&amp;characterEncoding=UTF8
 vip.mysql.wr.jdbc.username=root
 vip.mysql.wr.jdbc.password=12345678
 
