--- a/jshow-web-admin/test.properties
+++ b/jshow-web-admin/test.properties
@@ -1,7 +1,7 @@
 ##  \u6570\u636e\u5e93 
-vip.mysql.wr.jdbc.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&amp;characterEncoding=UTF-8
+vip.mysql.wr.jdbc.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&amp;characterEncoding=UTF8
 vip.mysql.wr.jdbc.username=root
-vip.mysql.wr.jdbc.password=123456
+vip.mysql.wr.jdbc.password=12345678
 
 
 ## \u65e5\u5fd7 
